build/yaml/webhook/nsx-operator.yaml
apiVersion: v1
kind: Service
metadata:
  name: nsx-operator
  namespace: vmware-system-nsx
  labels:
    component: nsx-operator
spec:
  ports:
    - name: metrics
      port: 8093
      targetPort: 8093
      protocol: TCP
  selector:
    component: nsx-operator

---

# Create Namespace for NSX owned resources
kind: Namespace
apiVersion: v1
metadata:
  name: vmware-system-nsx


---



---

apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: service
    app.kubernetes.io/instance: webhook-service
    app.kubernetes.io/component: webhook
    app.kubernetes.io/created-by: nsx-operator
    app.kubernetes.io/part-of: nsx-operator
    app.kubernetes.io/managed-by: kustomize
  name: subnetset
  namespace: vmware-system-nsx
spec:
  ports:
    - port: 443
      protocol: TCP
      targetPort: 9443
  selector:
    component: nsx-operator

---

apiVersion: apps/v1
kind: Deployment
metadata:
  # VMware NSX Container Plugin
  name: nsx-operator
  namespace: vmware-system-nsx
  labels:
    tier: nsx-networking
    component: nsx-operator
    version: v1
spec:
  # Active-Standby is supported from NCP 2.4.0 release,
  # so replica can be more than 1 if NCP HA is activated.
  # replica *must be* 1 if NCP HA is deactivated.
  selector:
    matchLabels:
      tier: nsx-networking
      component: nsx-operator
      version: v1

  replicas: 1

  template:
    metadata:
      labels:
        tier: nsx-networking
        component: nsx-operator
        version: v1

      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8001"

    spec:
      # NCP shares the host management network.
      hostNetwork: true

      tolerations:
        - key: node-role.kubernetes.io/master
          effect: NoSchedule
        - key: node-role.kubernetes.io/control-plane
          effect: NoSchedule

      # If configured with ServiceAccount, update the ServiceAccount
      # name below.
      serviceAccountName: nsx-operator-svc-account
      containers:
        - name: nsx-operator
          image: nsx-operator
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9443
              name: webhook-server
              protocol: TCP
          volumeMounts:
            - name: projected-volume
              mountPath: /etc/nsx-ujo
              readOnly: true
            - mountPath: /tmp/k8s-webhook-server/serving-certs
              name: cert
              readOnly: true
          command: ["/usr/local/bin/manager", "-nsxconfig", "/etc/nsx-ujo/ncp.ini", "-health-probe-bind-address", ":8384"]
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8384
            initialDelaySeconds: 5
            timeoutSeconds: 5
            periodSeconds: 10
            failureThreshold: 5
      volumes:
        - name: projected-volume
          projected:
            sources:
              # ConfigMap nsx-ncp-config is expected to supply ncp.ini
              - configMap:
                  name: nsx-ncp-config
                  items:
                    - key: ncp.ini
                      path: ncp.ini
        - name: cert
          secret:
            defaultMode: 420
            secretName: webhook-server-cert
---
