build/yaml/webhook/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: service
    app.kubernetes.io/instance: webhook-service
    app.kubernetes.io/component: webhook
    app.kubernetes.io/created-by: nsx-operator
    app.kubernetes.io/part-of: nsx-operator
    app.kubernetes.io/managed-by: kustomize
  name: nsx-operator-validate
  namespace: vmware-system-nsx
spec:
  ports:
    - port: 443
      protocol: TCP
      targetPort: 9981
  selector:
    component: nsx-ncp
