build/yaml/webhook/manifests.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: nsx-operator-validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: vmware-system-nsx-operator-webhook-service
      namespace: vmware-system-nsx
      # kubebuilder webhookpath.
      path: /validate-crd-nsx-vmware-com-v1alpha1-subnetset
  failurePolicy: Fail
  name: subnetset.validating.crd.nsx.vmware.com
  rules:
  - apiGroups:
    - crd.nsx.vmware.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - subnetsets
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: vmware-system-nsx-operator-webhook-service
      namespace: vmware-system-nsx
      path: /validate-crd-nsx-vmware-com-v1alpha1-addressbinding
  failurePolicy: Fail
  name: addressbinding.validating.crd.nsx.vmware.com
  rules:
  - apiGroups:
    - crd.nsx.vmware.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - addressbindings
  sideEffects: None
- admissionReviewVersions:
    - v1
  clientConfig:
    service:
      name: vmware-system-nsx-operator-webhook-service
      namespace: vmware-system-nsx
      path: /validate-crd-nsx-vmware-com-v1alpha1-ipaddressallocation
  failurePolicy: Fail
  name: ipaddressallocation.validating.crd.nsx.vmware.com
  rules:
    - apiGroups:
        - crd.nsx.vmware.com
      apiVersions:
        - v1alpha1
      operations:
        - DELETE
      resources:
        - ipaddressallocations
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: vmware-system-nsx-operator-webhook-service
      namespace: vmware-system-nsx
      path: /validate-crd-nsx-vmware-com-v1alpha1-subnet
  failurePolicy: Fail
  name: subnet.validating.crd.nsx.vmware.com
  rules:
  - apiGroups:
    - crd.nsx.vmware.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - subnets
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: vmware-system-nsx-operator-webhook-service
      namespace: vmware-system-nsx
      path: /validate-crd-nsx-vmware-com-v1alpha1-ipaddressallocation
  failurePolicy: Fail
  name: ipaddressallocation.validating.crd.nsx.vmware.com
  rules:
  - apiGroups:
    - crd.nsx.vmware.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - ipaddressallocations
  sideEffects: None
